<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/helloTitle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="@string/hello_title"
        android:textSize="24sp"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/registrationForm"

        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@id/helloTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="150dp" >
        <TextView
            android:id="@+id/registrationTitle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/registration_title"
            android:textSize="24sp"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <TextView
                android:id="@+id/switcherRegisterByNumber"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"

                android:layout_weight="1"
                android:layout_gravity="center"

                android:text="@string/register_by_number" />

            <TextView
                android:id="@+id/switcherRegisterByEmail"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"

                android:layout_weight="1"
                android:layout_gravity="center"

                android:text="@string/register_by_email" />
        </LinearLayout>

        <EditText
            android:id="@+id/usernameInput"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/username_input"
            android:inputType="text"

            android:layout_marginTop="16dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/externalFieldInput"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/phone_input"
            android:inputType="textEmailAddress"

            android:layout_marginTop="8dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/passwordInput"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/password_input"
            android:inputType="textPassword"

            android:layout_marginTop="8dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/passwordConfirmInput"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/password_confirm_input"
            android:inputType="textPassword"

            android:layout_marginTop="8dp"
            android:autofillHints="" />
    </LinearLayout>

    <Button
        android:id="@+id/registerButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/register_button"

        app:layout_constraintTop_toBottomOf="@id/registrationForm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>