<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
>
    <LinearLayout
        android:id="@+id/recylcerview"

        android:layout_height="wrap_content"
        android:layout_width="350dp"
        android:orientation="vertical"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/purple_700"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/model"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:text="@string/model"
            android:textSize="24sp"
            android:textColor="@color/purple_200"
            />

        <LinearLayout
            android:id="@+id/registrationForm"

            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/purple_500"
            >
            <TextView
                android:id="@+id/launchPrice"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:text="@string/price"
                android:textSize="15sp"
                android:textColor="@color/purple_200"
                />

            <TextView
                android:id="@+id/launchDate"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:text="@string/launchDate"
                android:textSize="15sp"
                android:textColor="@color/purple_200"
                />

            <TextView
                android:id="@+id/cameraScope"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:text="@string/cameraScore"
                android:textSize="15sp"
                android:textColor="@color/purple_200"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>